--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <header>
-            <a href="#" class="logo">F4Life - Moradias Universitárias</a>
+            <a href="#" class="logo">F4Life</a>
             <ul>
                 <li>
                     <a href="#"target="_blank">Quem somos</a>
@@ -31,35 +31,62 @@
         
         <div class="content">
             <h2>Invista em seus <span>Estudos</span></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nulla dolor iste eaque? Illo, alias magnam? Consequatur tenetur voluptatum delectus aut velit veniam ex, unde suscipit asperiores dignissimos voluptas reprehenderit.</p>
-            <a href="">Saiba Mais</a>
+            <p>Alugue com quem realmente se importa com sua moradia, faça networkings e construa seu futuro.</p>
+            <a href="">Fale conosco</a>
         </div>
 
         <div class="icons-right">
             <ul class="icons">
-                <li><a href="#"><ion-icon class="facebook" name="logo-facebook" target="_blank"></ion-icon></a></li>
-                <li><a href="#"><ion-icon class="instagram" name="logo-instagram" target="_blank"></ion-icon></a></li>
-                <li><a href="#"><ion-icon class="twitter" name="logo-twitter" target="_blank"></ion-icon></ion-icon></a></li>
+                <li><a href="http://www.facebook.com/porissomesmo" target="_blank"><ion-icon class="facebook" name="logo-facebook"></ion-icon></a></li>
+                <li><a href="http://www.instagram.com/odutrah" target="_blank"><ion-icon class="instagram" name="logo-instagram"></ion-icon></a></li>
+                <li><a href="http://twitter.com" target="_blank"><ion-icon class="twitter" name="logo-twitter" target="_blank"></ion-icon></ion-icon></a></li>
             </ul>
         </div>
 
         <div class="textBlocks">
             <div class="block">
                 <h3>Os melhores quartos</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Todos nossos quartos são visitados antes de anunciarmos.</p>
             </div>
             <div class="block">
-                <h3>Os melhores quartos</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <h3>As melhores Kitnets</h3>
+                <p>Kitnets equipadas com muito conforto e segurança.</p>
             </div>
         </div>
     </section>
 
-    <main>
-        <section class="form">
-            <form action=""></form>
-        </section>
-    </main>
+    <div class="quemSomos">
+        <div class="titleQuemSomos">
+            <h3>Quem somos</h3>
+        </div>
+            <p>F4Life é uma empresa de aluguéis de repúblicas para pessoas universitárias.<br>
+            Similar aos modelos de Quinto Andar e Loft, a empresa realiza reformas e prepara moradias para recepção de pessoas universitárias em um ambiente específico e otimizado para a vida de graduação.</p>
+        <div class="man-2">
+            <img src="imagens/man-2.png" alt="">
+        </div>
+    </div>
+
+    <section class="contact" id="contact">
+        <h2>Fale conosco</h2>
+        <img src="imagens/man.png" alt="">
+        <div class="contactForm">
+            <div id="erro"></div>
+            <h3>Preencha seus dados: </h3>
+            <div class="inputBox">
+                <input type="text" placeholder="Nome" id="nome">
+            </div>
+            <div class="inputBox">
+                <input type="text" placeholder="Email" id="email">
+            </div>
+            <div class="inputBox">
+                <textarea name="mensagem" cols="30" rows="5" id="mensagem"></textarea>
+            </div>
+            <div class="inputBox">
+                <button id="button">Enviar</button>
+            </div>
+            <div id="sucess"></div>
+        </div>
+    </section>
 
     <footer>
        <section class="footer">
