--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F4Life - Moradias Universitárias</title>
+    <link rel="shortcut icon" href="imagens/favicon.png" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <section>
         <header>
-            <a href="#" class="logo">F4Life</a>
+            <a href="" class="logo">F4Life</a>
             <ul>
                 <li>
-                    <a href="#"target="_blank">Quem somos</a>
+                    <a href="#quemSomos">Quem somos</a>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <a href="#" target="_blank">Fale conosco</a>
+                    <a href="#contact">Fale conosco</a>
                 </li>
             </ul>
             <ion-icon name="grid" class="menu"></ion-icon>
@@ -32,7 +33,7 @@
         <div class="content">
             <h2>Invista em seus <span>Estudos</span></h2>
             <p>Alugue com quem realmente se importa com sua moradia, faça networkings e construa seu futuro.</p>
-            <a href="">Fale conosco</a>
+            <a href="#contact">Fale conosco</a>
         </div>
 
         <div class="icons-right">
@@ -55,7 +56,7 @@
         </div>
     </section>
 
-    <div class="quemSomos">
+    <div class="quemSomos" id="quemSomos">
         <div class="titleQuemSomos">
             <h3>Quem somos</h3>
         </div>
