--- a/index.html
+++ b/index.html
@@ -17,25 +17,22 @@
                     <a href="#quemSomos">Quem somos</a>
                 </li>
             </ul>
-
             <ul>
                 <li>
                     <a href="#contact">Fale conosco</a>
                 </li>
             </ul>
-            <ion-icon name="grid" class="menu"></ion-icon>
+            <ion-icon name="grid" class="iconMenu"></ion-icon>
         </header>
-        <div class="images-section">
-            <img src="imagens/fundo.jpg" alt="" class="bg">
-            <img src="imagens/womanTransition.png" alt="" class="woman">
+        <div class="imagesHome">
+            <img src="imagens/fundoHome.jpg" alt="Imagem inteira azul com luminosidade, é imagem de fundo" class="backgroundHome">
+            <img src="imagens/imgWomanHome.png" alt="Mulher universitária, segurando algumas pastasna mão, demonstrando sinais de felicidade" class="imgWomanHome">
         </div>
-        
-        <div class="content">
+        <div class="textoHome">
             <h2>Invista em seus <span>Estudos</span></h2>
             <p>Alugue com quem realmente se importa com sua moradia, faça networkings e construa seu futuro.</p>
             <a href="#contact">Fale conosco</a>
         </div>
-
         <div class="icons-right">
             <ul class="icons">
                 <li><a href="http://www.facebook.com/porissomesmo" target="_blank"><ion-icon class="facebook" name="logo-facebook"></ion-icon></a></li>
@@ -43,52 +40,50 @@
                 <li><a href="http://twitter.com" target="_blank"><ion-icon class="twitter" name="logo-twitter" target="_blank"></ion-icon></ion-icon></a></li>
             </ul>
         </div>
-
-        <div class="textBlocks">
-            <div class="block">
+        <div class="textCardHome">
+            <div class="textCardHome__card">
                 <h3>Os melhores quartos</h3>
-                <p>Todos nossos quartos são visitados antes de anunciarmos.</p>
+                <p>Todos nossos quartos são visitados por especialistas antes de anunciarmos.</p>
             </div>
-            <div class="block">
+            <div class="textCardHome__card">
                 <h3>As melhores Kitnets</h3>
-                <p>Kitnets equipadas com muito conforto e segurança.</p>
+                <p>Se você quer algo aconchegante, as kitnets são equipadas com muito conforto e segurança.</p>
             </div>
         </div>
     </section>
-
-    <div class="quemSomos" id="quemSomos">
-        <div class="titleQuemSomos">
-            <h3>Quem somos</h3>
+    <main>
+        <div class="quemSomos" id="quemSomos">
+            <div class="titleQuemSomos__quemSomos">
+                <h3>Quem somos</h3>
+            </div>
+                <p>F4Life é uma empresa de aluguéis de repúblicas para pessoas universitárias.<br>
+                Similar aos modelos de Quinto Andar e Loft, a empresa realiza reformas e prepara moradias para recepção de pessoas universitárias em um ambiente específico e otimizado para a vida de graduação.</p>
+            <div class="quemSomos__imgManQuemSomos">
+                <img src="imagens/quemSomos__imgManQuemSomos.png" alt="Homem, segurando sua mochila de lado e na outra mão segurando um copo de café personalizado. com um fundo redondo da cor mostarda, atrás dele">
+            </div>
         </div>
-            <p>F4Life é uma empresa de aluguéis de repúblicas para pessoas universitárias.<br>
-            Similar aos modelos de Quinto Andar e Loft, a empresa realiza reformas e prepara moradias para recepção de pessoas universitárias em um ambiente específico e otimizado para a vida de graduação.</p>
-        <div class="man-2">
-            <img src="imagens/man-2.png" alt="">
-        </div>
-    </div>
-
+    </main>
     <section class="contact" id="contact">
         <h2>Fale conosco</h2>
-        <img src="imagens/man.png" alt="">
-        <div class="contactForm">
-            <div id="erro"></div>
-            <h3>Preencha seus dados: </h3>
+        <img src="imagens/contact__manForm.png" alt="Homem vestido com uma jaqueta jeans, com um fundo redondo em azul atrás dele.">
+        <div class="contact__contactForm">
+            <div id="textoErroForm"></div>
+                <h3>Preencha seus dados: </h3>
             <div class="inputBox">
-                <input type="text" placeholder="Nome" id="nome">
+                <input name = "nome" type="text" placeholder="Nome" id="nome">
             </div>
             <div class="inputBox">
                 <input type="text" placeholder="Email" id="email">
             </div>
             <div class="inputBox">
-                <textarea name="mensagem" cols="30" rows="5" id="mensagem"></textarea>
+                <input name="mensagem" id="mensagem" placeholder="Mensagem"></input>
             </div>
             <div class="inputBox">
                 <button id="button">Enviar</button>
             </div>
-            <div id="sucess"></div>
+            <div id="textoSucessoForm"></div>
         </div>
     </section>
-
     <footer>
        <section class="footer">
         <p>Autor: Thiago Dutra</p>
